getCategoryTree is added to ProductCategoryController
